syntax = "proto3";

package product;

// Product Service Definition
service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
  rpc GetProduct(GetProductRequest) returns (ProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteResponse);
  rpc ListProducts(ListProductsRequest) returns (ProductListResponse);
}

// Product Message
message Product {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
  string created_at = 6;
  string updated_at = 7;
}

// Request Messages
message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  int32 stock = 4;
}

message GetProductRequest {
  int32 id = 1;
}

message UpdateProductRequest {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
}

message DeleteProductRequest {
  int32 id = 1;
}

message ListProductsRequest {
  int32 page = 1;
  int32 limit = 2;
}

// Response Messages
message ProductResponse {
  bool success = 1;
  string message = 2;
  Product product = 3;
}

message ProductListResponse {
  bool success = 1;
  string message = 2;
  repeated Product products = 3;
  int32 total = 4;
}

message DeleteResponse {
  bool success = 1;
  string message = 2;
}
